--- a/public/css/_landing.css
+++ b/public/css/_landing.css
@@ -70,6 +70,11 @@
   font-weight: 500;
   text-decoration: none !important;
 }
+@media only screen and (max-width: 920px) {
+  .landing__nav .landing__nav__link#get-started {
+    display: none;
+  }
+}
 
 .landing__hero {
   display: flex;
@@ -136,6 +141,23 @@
 
 .landing__footer ul li {
   margin: 20px;
+}
+
+@media only screen and (max-width: 720px) {
+  .landing__footer__content {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .landing__footer__content .copy {
+    text-align: left;
+  }
+
+  .landing__footer ul {
+    align-items: flex-start;
+    flex-direction: column;
+    margin-left: -20px;
+  }
 }
 
 .text-editor {
